--- a/templates/livres/show2.html.twig
+++ b/templates/livres/show2.html.twig
@@ -20,6 +20,7 @@
 
 		<p>{{livre.resume}}</p>
 <parent>
+        <a href="{{url('User_livres_commande',{'id':livre.id})}}" class="btn btn-primary">Buy Now</a>
     </div>
 </div>
 
