--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -1,34 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des livres
+{% block title %}Panier
 {% endblock %}
 
 {% block body %}
-	<h1>Les commandes</h1>.
+	<h1>Panier</h1>.
 	
 	<table class="table">
+		<thead>
 		<tr>
-			<th>Commande</th>
+			<th>Produit</th>
 			<th>Prix</th>
-            <th colspan='2'>Action</th>
+			<th>Quantite</th>
+			<th>Total</th>
+			<th colspane='3'>Actions</th>
 		</tr>
-
-		{% for livre in livres %}
+		</thead>
+		<tbody>
+			{% for ele in data %}
+				<tr>
+					<td>{{ele.livre.titre}}</td>
+					<td>{{ele.livre.prix}} DT</td>
+					<td>{{ele.quantite}}</td>
+					<td>{{ele.quantite * ele.livre.prix}} DT</td>
+					<td>
+					<a href="{{ path('User_livres_commande', {'id': ele.livre.id}) }}" class="btn btn-success">+</a>
+					<a href="{{ path('User_livres_remove', {'id': ele.livre.id}) }}" class="btn btn-warning">-</a>
+					<a href="{{ path('User_livres_delete', {'id': ele.livre.id}) }}" class="btn btn-danger">Supprimer</a>
+					</td>
+				</tr>
+				{% else %}
+				<tr>
+					<td colspan="5">
+						<p>Votre panier est vide</p>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+		<tfoot>
 			<tr>
+				<td colspan='3'>Total</td>
+				<td>{{total}} Dt</td>
 				<td>
-                <div class="book-container"><div class="book-cover">
-		        <img src="{{livre.image}}" alt="photo du livre">
-		        </div>{{livre.titre|capitalize}}</div></td>
-				<td>{{livre.prix}}</td>
-				<td>
-					<a href="#" class="btn btn-success btn-sm">Confirmer</a>
+					<a href="{{path('User_empty')}}" class="btn btn-danger">Vider</a>
 				</td>
-                <td>
-					<a href="#" class="btn btn-success btn-sm">Supprimer</a>
-				</td>
-				
 			</tr>
-		{% endfor %}
+		</tfoot>
 	</table>
-
 {% endblock %}
