--- a/templates/livres/index2.html.twig
+++ b/templates/livres/index2.html.twig
@@ -12,13 +12,11 @@
                     <img src="{{ livre.image }}" class="card-img-top" alt="photo du livre" style="width: 100%; height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">{{ livre.titre|capitalize }}</h5>
-                        <p class="card-text"><strong>ISBN:</strong> {{ livre.ISBN }}</p>
-                        <p class="card-text"><strong>Editeur:</strong> {{ livre.editeur }}</p>
-                        <p class="card-text"><strong>Date Edition:</strong> {{ livre.editedAt|date('d-m-Y') }}</p>
-                        <p class="card-text"><strong>Prix:</strong> {{ livre.prix }}</p>
+                        <p class="card-text"><strong>Auteur:</strong> {{ livre.auteur}}</p>
                         <p class="card-text"><strong>Catégorie:</strong> {{ livre.categorie.libelle }}</p>
-                        <p class="card-text">{{ livre.resume | slice(0, 150) }}{% if livre.resume | length > 150 %}...{% endif %}</p>
-                        <a href="{{ url('User_livres_commande', {'id': livre.id}) }}" class="btn btn-primary">Buy Now</a>
+                        <a href="{{ url('User_livres_commande', {'id': livre.id}) }}" class="btn btn-primary">Acheter</a>
+                        <a href="{{url('user_livres_show',{'id':livre.id})}}" class="btn btn-dark">Voir plus</a>
+
                     </div>
                 </div>
             </div>
