--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,23 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .form-link {
+            display: block;
+            margin-top: 10px;
+            text-align: right;
+            font-size: 14px;
+            color: #007bff;
+        }
 
+        .form-link:hover {
+            text-decoration: none;
+            color: #0056b3;
+        }
+    </style>
+{% endblock %}
 {% block body %}
 <form method="post">
     {% if error %}
@@ -10,14 +26,14 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+             Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal"> Se connecter</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -25,8 +41,11 @@
     >
     <br>
     <button class="btn btn-secondary" type="submit">
-        Sign in
+        Se connecter
     </button>
+    <div class="form-link">
+        <a href="{{path('passe_oublier')}}">Mot de passe oublié</a>
+    </div>
 </form>
 
 {% endblock %}
