--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,12 +6,22 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> {% block stylesheets %}{% endblock %}
-		<link rel="stylesheet" href="{{asset('assets/css/bootstrap.css')}}">
-
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> 
+		{% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}">
+		<style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #000; /* Set background color to black */
+            color: #fff; /* Set text color to white */
+        }
+        
+        
+    </style>
+    
 	</head>
 	<body>
-<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">SymBook</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,35 +35,42 @@
 								<span class="visually-hidden">(current)</span>
 							</a>
 						</li>
-						  {% if is_granted('ROLE_ADMIN') %}
-       						 <li class="nav-item">
-            					<a class="nav-link" href="{{url('admin_livres')}}">Nos Livres</a>
-        					</li>
-        					<li class="nav-item">
-           					 <a class="nav-link" href="{{url('admin_categorie')}}">Nos Catégories</a>
-        					</li>
+						 {% if is_granted('ROLE_ADMIN') %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url('admin_livres') }}">Nos Livres</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url('admin_categorie') }}">Nos Catégories</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url('admin_users') }}">Les Utilisateurs</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url('app_stats') }}">Statistiques</a>
+						</li>
     					{% elseif is_granted('ROLE_USER') %}
-       					 <li class="nav-item">
-           				 <a class="nav-link" href="{{url('User_livres')}}"> Livres</a>
-        				</li>
-    				{% endif %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url('User_livres') }}">Livres</a>
+						</li>
+                	{% endif %}
 					</ul>
 					<ul class="navbar-nav me-ml">
-					{% if app.user %}
-						<li class="nav-item">
-							<a class="nav-link" href="{{url('app_commande')}}">Panier
+						{% if app.user %}
+							{% if is_granted('ROLE_USER') %}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ url('app_commande') }}">Panier</a>
+									<span class="visually-hidden">(current)</span>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{ url('user_profile_update') }}">Mon Compte</a>
+									<span class="visually-hidden">(current)</span>
+								</li>
+							{% endif %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ url('app_logout') }}">Déconnexion</a>
 								<span class="visually-hidden">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{url('user_profile_update')}}">Mon Compte</a>
-							<span class="visually-hidden">(current)</span>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{url('app_logout')}}">Déconnexion</a>
-							<span class="visually-hidden">(current)</span>
-						</li>
-						{% else %}
+							</li>
+                	{% else %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{url('app_register')}}">s'inscrire</a>
 							<span class="visually-hidden">(current)</span>
@@ -70,6 +87,7 @@
 		
 
 		<div class="container mt-3"> {% block body %}{% endblock %}
-			</div>
+		</div>
+		{% block javascripts %}{% endblock %}
 		</body>
 	</html>
