--- a/templates/livres/index.html.twig
+++ b/templates/livres/index.html.twig
@@ -8,7 +8,8 @@
 	<div class="d-flex justify-content-end">
 		<a href="{{url('admin_livres_add')}}" class="btn btn-success">Ajouter un nouveau livre</a>
 	</div>
-	<table class="table">
+	<br>
+	<table class="table table-hover">
 		<tr>
 			<th>Titre</th>
 			<th>ISBN</th>
